...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_sheet_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/hint_googleplex"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
...
                app:layout_constraintBottom_toTopOf="@+id/tv_sheet_radius_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_sheet_name_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_sheet_name_label" />

            <Spinner
                android:id="@+id/spinner_expiration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:entries="@array/spinner_entries_intervals"
                android:minHeight="@dimen/touch_target_min_height"
                android:selectedItemPosition="@={viewModel.currentReminder.expirationInterval}"
...
                app:layout_constraintBottom_toTopOf="@+id/slider_sheet_duration"
                app:layout_constraintEnd_toEndOf="@+id/slider_sheet_radius"
                app:layout_constraintStart_toEndOf="@+id/tv_sheet_duration"
                app:layout_constraintTop_toBottomOf="@+id/tv_sheet_expiration_label" />

            <Spinner
                android:id="@+id/spinner_transition"
                enableCustomAdapter="@{true}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:entries="@array/spinner_entries_transition_types"
                android:minHeight="@dimen/touch_target_min_height"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/slider_sheet_duration"
                app:layout_constraintStart_toStartOf="@+id/tv_sheet_name_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_sheet_transition_label" />

            <TextView
                android:id="@+id/tv_geofence_request_header"
                headerText="@{viewModel.isEditing}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:gravity="center"
                android:padding="@dimen/padding_normal"
...
