<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:onClick="@{() -> clickListener.onClick(currentReminder)}"
        app:cardCornerRadius="@dimen/corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_list_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@{currentReminder.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_list_item_latlng"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_item_location" />

            <TextView
                android:id="@+id/tv_list_item_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@{currentReminder.description}"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_item_title" />

            <TextView
                android:id="@+id/tv_list_item_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_normal"
                android:gravity="end"
                android:text="@{currentReminder.location_name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_list_item_latlng"
                latitude="@{currentReminder.latitude}"
                longitude="@{currentReminder.longitude}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/latlng_text_size"
                app:layout_constraintEnd_toEndOf="@+id/tv_list_item_location"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_item_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <data>

        <variable
            name="currentReminder"
            type="com.udacity.project4.domain.model.Reminder" />

        <variable
            name="clickListener"
            type="com.udacity.project4.presentation.adapters.ReminderListener" />
    </data>
</layout>