...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.ui.reminders.reminders_edit.ReminderEditFragment">

            <EditText
                android:id="@+id/et_reminder_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/reminder_title_hint"
                android:imeOptions="actionNext"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title_label"
                app:layout_constraintTop_toBottomOf="@id/tv_title_label"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/et_reminder_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/reminder_description_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/tv_mapview_label"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/mv_reminder_location_map"
                app:layout_constraintStart_toStartOf="@+id/tv_title_label"
                app:layout_constraintTop_toBottomOf="@id/et_reminder_description" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mv_reminder_location_map"
                android:layout_width="0dp"
...
